client cert docs for issue #851

--- a/documentation/asciidoc/topics/yaml/encryption_keystore_secret.yaml
+++ b/documentation/asciidoc/topics/yaml/encryption_keystore_secret.yaml
@@ -5,6 +5,6 @@ metadata:
 type: Opaque
 stringData:
   alias: server
-  password: password
+  password: changeme
 data:
   keystore.p12:  "MIIKDgIBAzCCCdQGCSqGSIb3DQEHA..."
