Missied deletecollection resources for ingresses and routes fixes #1100

--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -413,6 +413,7 @@ spec:
                 - watch
                 - create
                 - delete
+                - deletecollection
             - apiGroups:
                 - networking.k8s.io
               resources:
@@ -423,6 +424,7 @@ spec:
                 - watch
                 - create
                 - delete
+                - deletecollection
             - apiGroups:
                 - monitoring.coreos.com
               resources:
