--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -99,6 +99,7 @@ rules:
   - watch
   - create
   - delete
+  - deletecollection
 - apiGroups:
   - networking.k8s.io
   resources:
@@ -109,6 +110,7 @@ rules:
   - watch
   - create
   - delete
+  - deletecollection
 - apiGroups:
   - monitoring.coreos.com
   resources:
