Allow update for Route and Ingress #1108

--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -414,6 +414,7 @@ spec:
                 - create
                 - delete
                 - deletecollection
+                - update
             - apiGroups:
                 - networking.k8s.io
               resources:
@@ -425,6 +426,7 @@ spec:
                 - create
                 - delete
                 - deletecollection
+                - update
             - apiGroups:
                 - monitoring.coreos.com
               resources:
