--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -100,6 +100,7 @@ rules:
   - create
   - delete
   - deletecollection
+  - update
 - apiGroups:
   - networking.k8s.io
   resources:
@@ -111,6 +112,7 @@ rules:
   - create
   - delete
   - deletecollection
+  - update
 - apiGroups:
   - monitoring.coreos.com
   resources:
