--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -1369,7 +1369,7 @@ spec:
       serviceAccountName: infinispan-operator
       containers:
         - name: infinispan-operator
-          image: quay.io/infinispan/operator:latest
+          image: quay.io/infinispan/operator:2.1.x
           ports:
           - containerPort: 60000
             name: metrics
