Operator upgrades from 2.0.x -> 2.1.x fail on restart
- ISPN-13116 SFS failures on upgrade from 11.0.9.Final -> 12.1.3.Final
- OLM skip versions 2.1.0 -> 2.1.4 when upgrading to avoid SFS corruption

--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -78,6 +78,7 @@ metadata:
     createdAt: 2021-01-26T09:00:00Z
     support: Infinispan
     certified: "false"
+    olm.skipRange: ">=2.1.0 <2.1.5"
   name: infinispan-operator.v2.1.4
   namespace: placeholder
 spec:
