Add deletecollection verb for pods, services etc

--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -339,6 +339,7 @@ spec:
                 - update
                 - delete
                 - patch
+                - deletecollection
             - apiGroups:
                 - ""
               resources:
