Exposed port for LoadBalancer services (application and xsite) should be configurable fixes #1169

--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -703,6 +703,9 @@ spec:
                 nodePort:
                   format: int32
                   type: integer
+                port:
+                  format: int32
+                  type: integer
                 type:
                   description: Type specifies different exposition methods for data grid
                   enum:
@@ -813,6 +816,9 @@ spec:
                                 type: string
                               type: object
                             nodePort:
+                              format: int32
+                              type: integer
+                            port:
                               format: int32
                               type: integer
                             type:
