--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -457,6 +457,9 @@ spec:
                 nodePort:
                   format: int32
                   type: integer
+                port:
+                  format: int32
+                  type: integer
                 type:
                   description: Type specifies different exposition methods for data grid
                   enum:
@@ -567,6 +570,9 @@ spec:
                                 type: string
                               type: object
                             nodePort:
+                              format: int32
+                              type: integer
+                            port:
                               format: int32
                               type: integer
                             type:
