Exposed port for LoadBalancer services (application and xsite) should be configurable fixes #1169

--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -435,6 +435,9 @@ spec:
                 nodePort:
                   format: int32
                   type: integer
+                port:
+                  format: int32
+                  type: integer
                 type:
                   description: Type specifies different exposition methods for data grid
                   enum:
@@ -545,6 +548,9 @@ spec:
                                 type: string
                               type: object
                             nodePort:
+                              format: int32
+                              type: integer
+                            port:
                               format: int32
                               type: integer
                             type:
