--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -682,6 +682,9 @@ spec:
                 nodePort:
                   format: int32
                   type: integer
+                port:
+                  format: int32
+                  type: integer
                 type:
                   description: Type specifies different exposition methods for data grid
                   enum:
@@ -792,6 +795,9 @@ spec:
                                 type: string
                               type: object
                             nodePort:
+                              format: int32
+                              type: integer
+                            port:
                               format: int32
                               type: integer
                             type:
