docs for configurable LB service port

--- a/documentation/asciidoc/topics/yaml/xsite_manual.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_manual.yaml
@@ -6,6 +6,7 @@ spec:
         name: LON
         expose:
           type: LoadBalancer
+          port: 65535
       locations:
       - name: NYC
         url: infinispan+xsite://infinispan-nyc.myhost.com:7900
