--- a/documentation/asciidoc/topics/yaml/xsite_lon.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_lon.yaml
@@ -11,6 +11,7 @@ spec:
         name: LON
         expose:
           type: LoadBalancer
+          port: 65535
       locations:
         - name: NYC
           clusterName: <nyc_cluster_name>
