--- a/documentation/asciidoc/topics/yaml/xsite_nyc.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_nyc.yaml
@@ -11,6 +11,7 @@ spec:
         name: NYC
         expose:
           type: LoadBalancer
+          port: 65535
       locations:
         - name: LON
           clusterName: {example_crd_name}
