[test-integration] Upgrade IT

--- a/test-integration/global-test.properties
+++ b/test-integration/global-test.properties
@@ -1,1 +1,16 @@
+# Tested Operator Config
+operator.infinispan.name=datagrid
+operator.infinispan.namespace=openshift-operators
+operator.infinispan.channel=8.1.x
+operator.infinispan.approval=Manual
+operator.infinispan.source=datagrid-catalog
+operator.infinispan.source.namespace=openshift-marketplace
+operator.infinispan.version=8.1.7
+
+# Suite config
+olm.catalog.ga=redhat-operators
+olm.catalog.dev=datagrid-catalog
+olm.operators.namespace.global=openshift-operators
+olm.operators.namespace.marketplace=openshift-marketplace
+
 xtf.testserver.image=registry.access.redhat.com/jboss-webserver-3/webserver31-tomcat8-openshift:1.3
