--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -12,13 +12,14 @@
     <properties>
         <!-- Dependencies versions -->
         <version.infinispan>12.1.4.Final</version.infinispan>
-        <version.fabric8>4.13.0</version.fabric8>
+        <version.fabric8>5.5.0</version.fabric8>
         <version.junit>5.7.0</version.junit>
         <version.lombok>1.16.22</version.lombok>
         <version.logback>1.2.0</version.logback>
         <version.slf4j>1.7.30</version.slf4j>
         <version.verifier>1.5</version.verifier>
         <version.xtf>0.21</version.xtf>
+        <version.dom4j>2.1.3</version.dom4j>
 
         <!-- Plugin versions -->
         <version.maven.compiler>3.8.1</version.maven.compiler>
@@ -81,6 +82,12 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>log4j-over-slf4j</artifactId>
                 <version>${version.slf4j}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.dom4j</groupId>
+                <artifactId>dom4j</artifactId>
+                <version>${version.dom4j}</version>
             </dependency>
 
             <dependency>
