--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -2,6 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
   annotations:
+    olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.8"}]'
     alm-examples: |-
       [
         {
@@ -74,12 +75,12 @@ metadata:
     categories: Database
     repository: https://github.com/infinispan/infinispan-operator
     description: Create and manage Infinispan clusters.
-    containerImage: quay.io/infinispan/operator:2.1.3.Final
-    createdAt: 2021-01-26T09:00:00Z
+    containerImage: quay.io/infinispan/operator:2.1.4.Final
+    createdAt: 2021-07-29T09:00:00Z
     support: Infinispan
     certified: "false"
     olm.skipRange: ">=2.1.0 <2.1.5"
-  name: infinispan-operator.v2.1.4
+  name: infinispan-operator.v2.1.5
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -309,8 +310,8 @@ spec:
                       - name: OPERATOR_NAME
                         value: infinispan-operator
                       - name: RELATED_IMAGE_OPENJDK
-                        value: quay.io/infinispan/server:12.1.3.Final
-                    image: quay.io/infinispan/operator:2.1.3.Final
+                        value: quay.io/infinispan/server:12.1.7.Final
+                    image: quay.io/infinispan/operator:2.1.4.Final
                     imagePullPolicy: Always
                     name: infinispan-operator
                     ports:
@@ -515,8 +516,8 @@ spec:
       type: AllNamespaces
   maturity: alpha
   provider: {name: Infinispan}
-  replaces: infinispan-operator.v2.1.3
-  version: 2.1.4
+  replaces: infinispan-operator.v2.1.4
+  version: 2.1.5
   keywords:
     - infinispan
     - key value
@@ -529,7 +530,7 @@ spec:
       email: infinispan-dev@lists.jboss.org
   relatedImages:
     - name: infinispan-server
-      image: quay.io/infinispan/server:12.1.3.Final
+      image: quay.io/infinispan/server:12.1.7.Final
   labels:
     operated-by: infinispan-operator
   selector:
