--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -503,6 +503,7 @@ spec:
                 - storageclasses
               verbs:
                 - get
+                - list
                 - watch
     strategy: deployment
   installModes:
