--- a/config/samples/infinispan_v2alpha1_restore.yaml
+++ b/config/samples/infinispan_v2alpha1_restore.yaml
@@ -1,4 +1,4 @@
-apiVersion: infinispan.infinispan.org/v2alpha1
+apiVersion: infinispan.org/v2alpha1
 kind: Restore
 metadata:
   name: restore-sample
