--- a/config/crd/patches/cainjection_in_restores.yaml
+++ b/config/crd/patches/cainjection_in_restores.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: restores.infinispan.infinispan.org
+  name: restores.infinispan.org
