--- a/config/crd/patches/webhook_in_batches.yaml
+++ b/config/crd/patches/webhook_in_batches.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: batches.infinispan.infinispan.org
+  name: batches.infinispan.org
 spec:
   conversion:
     strategy: Webhook
