--- a/config/rbac/batch_viewer_role.yaml
+++ b/config/rbac/batch_viewer_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: batch-viewer-role
 rules:
 - apiGroups:
-  - infinispan.infinispan.org
+  - infinispan.org
   resources:
   - batches
   verbs:
@@ -13,7 +13,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - infinispan.infinispan.org
+  - infinispan.org
   resources:
   - batches/status
   verbs:
