--- a/config/rbac/infinispan_editor_role.yaml
+++ b/config/rbac/infinispan_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: infinispan-editor-role
 rules:
 - apiGroups:
-  - infinispan.infinispan.org
+  - infinispan.org
   resources:
   - infinispans
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - infinispan.infinispan.org
+  - infinispan.org
   resources:
   - infinispans/status
   verbs:
