OLM Integration tests
- Include upgrade test in CI #1231

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -11,6 +11,9 @@ namespace: infinispan-operator-system
 # field above.
 namePrefix: infinispan-operator-
 
+commonLabels:
+  app.kubernetes.io/name: infinispan-operator
+
 resources:
 - ../crd
 - ../rbac
