Server config generator + overlay user custom config #1253 #958

--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -667,6 +667,8 @@ spec:
                 required:
                 - bootstrapServers
                 type: object
+              configMapName:
+                type: string
               container:
                 description: InfinispanContainerSpec specify resource requirements
                   per container
