Gossip Router based Cross-Site Replication
Using Gossip Router and TUNNEL transport for cross-site replication
between Infinispan clusters

--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -858,6 +858,9 @@ spec:
                             required:
                             - type
                             type: object
+                          maxRelayNodes:
+                            format: int32
+                            type: integer
                           name:
                             type: string
                         required:
