--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -11,8 +11,11 @@ rules:
   resources:
   - deployments
   verbs:
+  - create
+  - delete
   - get
   - list
+  - update
   - watch
 - apiGroups:
   - apps
