JDG-4595 Make locations required if site is set
Closes #1258

--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -893,6 +893,7 @@ spec:
                         type: array
                     required:
                     - local
+                    - locations
                     type: object
                   type:
                     enum:
