POD_NAME missing in Operator deployment #1264

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -38,3 +38,7 @@ spec:
                 fieldPath: metadata.namespace
           - name: RELATED_IMAGE_OPENJDK
             value: "quay.io/infinispan/server:13.0"
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
