--- a/documentation/asciidoc/topics/yaml/xsite_cluster_ip.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_cluster_ip.yaml
@@ -13,6 +13,7 @@ spec:
         name: SiteA
         expose:
           type: ClusterIP
+        maxRelayNodes: 1
       locations:
         - name: SiteB
           clusterName: example-clusterb
