--- a/documentation/asciidoc/topics/yaml/xsite_lon.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_lon.yaml
@@ -12,6 +12,7 @@ spec:
         expose:
           type: LoadBalancer
           port: 65535
+        maxRelayNodes: 1
       locations:
         - name: NYC
           clusterName: <nyc_cluster_name>
