--- a/documentation/asciidoc/topics/yaml/xsite_lon_static.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_lon_static.yaml
@@ -12,6 +12,7 @@ spec:
         expose:
           type: LoadBalancer
           port: 65535
+        maxRelayNodes: 1
       locations:
         - name: NYC
           url: infinispan+xsite://infinispan-nyc.myhost.com:7900
