--- a/documentation/asciidoc/topics/yaml/xsite_nyc_static.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_nyc_static.yaml
@@ -12,6 +12,7 @@ spec:
         expose:
           type: LoadBalancer
           port: 65535
+        maxRelayNodes: 1
       locations:
         - name: LON
           url: infinispan+xsite://infinispan-lon.myhost.com
