Fix OLM rbac to allow per namespace installs

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -22,7 +22,7 @@ spec:
       labels:
         control-plane: controller-manager
     spec:
-      serviceAccountName: default
+      serviceAccountName: infinispan-operator
       containers:
       - name: manager
         image: controller:latest
