--- a/config/manifests/bases/infinispan-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/infinispan-operator.clusterserviceversion.yaml
@@ -6,6 +6,7 @@ metadata:
     capabilities: Deep Insights
     categories: Database
     certified: "false"
+    containerImage: <IMAGE>
     description: Create and manage Infinispan clusters.
     repository: https://github.com/infinispan/infinispan-operator
   name: infinispan-operator.v0.0.0
@@ -73,5 +74,5 @@ spec:
   maturity: alpha
   provider:
     name: Infinispan
-  replaces: infinispan-operator.v2.1.5
+  replaces: infinispan-operator.v2.2.0
   version: 0.0.0
