--- a/test-integration/operator-tests/src/test/resources/infinispans/client_authentication.yaml
+++ b/test-integration/operator-tests/src/test/resources/infinispans/client_authentication.yaml
@@ -1,7 +1,7 @@
 apiVersion: infinispan.org/v1
 kind: Infinispan
 metadata:
-  name: client-validation
+  name: client-authentication
   annotations:
     infinispan.org/monitoring: 'false'
 spec:
@@ -11,10 +11,8 @@ spec:
     type: Route
   replicas: 1
   security:
-    endpointAuthentication: true
     endpointEncryption:
       type: Secret
       certSecretName: encryption-secret
-      clientCert: Validate
-      clientCertSecretName: client-validation-client-cert-secret
-    endpointSecretName: connect-secret
+      clientCert: Authenticate
+      clientCertSecretName: client-authentication-client-cert-secret
