--- a/kind-config-xsite.yaml
+++ b/kind-config-xsite.yaml
@@ -2,4 +2,6 @@ kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
   - role: control-plane
+    image: quay.io/rigazilla/custom-kind:v1.21.1
   - role: worker
+    image: quay.io/rigazilla/custom-kind:v1.21.1
