Two-way Cache CR Reconciliation #747
- ConfigListener Deployment added to consume server-side cache lifecycle
  events and create/update/delete corresponding k8s Cache CR
- Server caches now removed on Cache CR deletion
- Cache CR spec.Template can be updated and changes are reflected on the
  server if runtime update of the configuration is possible.

--- a/config/crd/bases/infinispan.org_caches.yaml
+++ b/config/crd/bases/infinispan.org_caches.yaml
@@ -122,7 +122,8 @@ spec:
                   type: object
                 type: array
               serviceName:
-                description: Service name that exposes the cache inside the cluster
+                description: Deprecated. This is no longer set. Service name that
+                  exposes the cache inside the cluster
                 type: string
             type: object
         type: object
