--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -25,6 +25,21 @@ rules:
   - list
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - serviceaccounts
+  verbs:
+  - create
+  - delete
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - rolebindings
+  - roles
+  verbs:
+  - create
+  - delete
+- apiGroups:
   - storage.k8s.io
   resources:
   - storageclasses
