--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -667,6 +667,14 @@ spec:
                 required:
                 - bootstrapServers
                 type: object
+              configListener:
+                properties:
+                  enabled:
+                    description: If true, a dedicated pod is used to ensure that all
+                      config resources created on the Infinispan server have a matching
+                      CR resource
+                    type: boolean
+                type: object
               configMapName:
                 type: string
               container:
