Explicitly create ServiceAccount with `Make deploy`
- ServiceAccount renamed to "infinispan-operator-controller-manager"
- XSite scripts and test updated to use ^ ServiceAccount

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -22,7 +22,7 @@ spec:
       labels:
         control-plane: controller-manager
     spec:
-      serviceAccountName: infinispan-operator
+      serviceAccountName: controller-manager
       containers:
       - name: manager
         image: controller:latest
