CI fixes, Grafana enablement on OCP4.9

--- a/test-integration/global-test.properties
+++ b/test-integration/global-test.properties
@@ -1,1 +1,1 @@
-xtf.testserver.image=registry.access.redhat.com/jboss-webserver-3/webserver31-tomcat8-openshift:1.3
+xtf.testserver.image=registry.redhat.io/jboss-webserver-5/webserver55-openjdk11-tomcat9-openshift-rhel8:1.0
