--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ test.properties
 # Created by https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 ### Emacs ###
 # -*- mode: gitignore; -*-
-*~
 \#*\#
 /.emacs.desktop
 /.emacs.desktop.lock
@@ -89,10 +88,9 @@ tags
 .vscode/*
 .history
 openshift.local.clusterup/*
-build/_output
 vendor/
+### JetBrains ###
 .idea/
-*.iml
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 ### Backup files ###
 *.backup
