--- a/documentation/asciidoc/topics/yaml/container_resources.yaml
+++ b/documentation/asciidoc/topics/yaml/container_resources.yaml
@@ -1,5 +1,4 @@
 spec:
   container:
-    extraJvmOpts: "-XX:NativeMemoryTracking=summary"
-    cpu: "1000m"
-    memory: 1Gi
+    cpu: "2000m:1000m"
+    memory: "2Gi:1Gi"
