--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -44,4 +44,4 @@ spec:
           - name: CONFIG_LISTENER_IMAGE
             valueFrom:
               fieldRef:
-                fieldPath: "metadata.labels['containerImage']"
+                fieldPath: "metadata.annotations['containerImage']"
