Update docs for overlay Log4j config

--- a/documentation/asciidoc/topics/yaml/config-map-cluster-configuration.yaml
+++ b/documentation/asciidoc/topics/yaml/config-map-cluster-configuration.yaml
@@ -8,3 +8,8 @@ data:
      <infinispan>
        <!-- Custom configuration. -->
      </infinispan>
+
+   log4j.xml: >
+     <Configuration>
+       <!-- Custom configuration. -->
+     </Configuration>
