--- a/documentation/asciidoc/topics/yaml/cache_service.yaml
+++ b/documentation/asciidoc/topics/yaml/cache_service.yaml
@@ -21,8 +21,8 @@ spec:
         certSecretName: tls-secret
   container:
     extraJvmOpts: "-XX:NativeMemoryTracking=summary"
-    cpu: "2000m"
-    memory: 1Gi
+    cpu: "2000m:1000m"
+    memory: "2Gi:1Gi"
   logging:
     categories:
       org.infinispan: trace
