--- a/documentation/asciidoc/topics/yaml/datagrid_service.yaml
+++ b/documentation/asciidoc/topics/yaml/datagrid_service.yaml
@@ -12,6 +12,7 @@ spec:
     type: DataGrid
     container:
       storage: 2Gi
+      # The ephemeralStorage and storageClassName fields are mutually exclusive.
       ephemeralStorage: false
       storageClassName: my-storage-class
     sites:
