--- a/documentation/asciidoc/topics/yaml/infinispan_cache_template.yaml
+++ b/documentation/asciidoc/topics/yaml/infinispan_cache_template.yaml
@@ -1,9 +1,7 @@
 infinispan:
-  cache-container:
+  cacheContainer:
     name: "default"
     statistics: "true"
-    transport:
-      stack: "tcp"
     distributedCacheConfiguration:
       name: "my-dist-template"
       mode: "SYNC"
