--- a/config/crd/patches/webhook_in_batches.yaml
+++ b/config/crd/patches/webhook_in_batches.yaml
@@ -7,6 +7,7 @@ spec:
   conversion:
     strategy: Webhook
     webhook:
+      conversionReviewVersions: ["v1"]
       clientConfig:
         service:
           namespace: system
