--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -36,7 +36,7 @@ spec:
               fieldRef:
                 fieldPath: metadata.namespace
           - name: RELATED_IMAGE_OPENJDK
-            value: "quay.io/infinispan/server:13.0"
+            value: "quay.io/infinispan/server:13.0.8.Final"
           - name: POD_NAME
             valueFrom:
               fieldRef:
