Cache add Validating and Defaulting webhooks #1455

--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -27,6 +27,27 @@ webhooks:
     resources:
     - infinispans
   sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /mutate-infinispan-org-v2alpha1-cache
+  failurePolicy: Fail
+  name: mcache.kb.io
+  rules:
+  - apiGroups:
+    - infinispan.org
+    apiVersions:
+    - v2alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - caches
+  sideEffects: None
 
 ---
 apiVersion: admissionregistration.k8s.io/v1
@@ -76,4 +97,25 @@ webhooks:
     - UPDATE
     resources:
     - batches
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-infinispan-org-v2alpha1-cache
+  failurePolicy: Fail
+  name: vcache.kb.io
+  rules:
+  - apiGroups:
+    - infinispan.org
+    apiVersions:
+    - v2alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - caches
   sideEffects: None
