--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -30,6 +30,18 @@ spec:
         - operator
         - --leader-elect
         imagePullPolicy: Always
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8081
+          initialDelaySeconds: 15
+          periodSeconds: 20
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: 8081
+          initialDelaySeconds: 5
+          periodSeconds: 10
         env:
           - name: WATCH_NAMESPACE
             valueFrom:
