Create OpenShift interop testsuite

--- a/test-integration/operator-tests/src/test/resources/infinispans/cache_service.yaml
+++ b/test-integration/operator-tests/src/test/resources/infinispans/cache_service.yaml
@@ -8,6 +8,8 @@ spec:
     maxReplicas: 5
     minMemUsagePercent: 20
     minReplicas: 3
+  container:
+    memory: 512Mi
   expose:
     type: Route
   service:
