--- a/test-integration/operator-tests/pom.xml
+++ b/test-integration/operator-tests/pom.xml
@@ -84,6 +84,16 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${version.maven.surefire}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${version.maven.surefire}</version>
                 <configuration>
@@ -101,4 +111,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>interop</id>
+            <properties>
+                <excludedGroups>unstable</excludedGroups>
+            </properties>
+        </profile>
+    </profiles>
 </project>
