--- a/test-integration/operator-tests/src/test/resources/infinispans/client_authentication.yaml
+++ b/test-integration/operator-tests/src/test/resources/infinispans/client_authentication.yaml
@@ -7,6 +7,8 @@ metadata:
 spec:
   service:
     type: DataGrid
+    container:
+      ephemeralStorage: true
   expose:
     type: Route
   replicas: 1
